--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   parameters:
     calico:
-      chartVersion: "3.30.0"
+      chartVersion: "v3.30.0"
     argocd:
       chartVersion: "${ARGOCD_ENV_utils_argocd_helm_helm_version}"
       application:
