--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -4,8 +4,8 @@ kind: Kustomization
 resources:
   # utils
   - ../../../base/argocd-helm.yaml
-  # - ../../../base/storage.yaml
-  # - ../../../base/storage-post-config.yaml
+  - ../../../base/storage.yaml
+  - ../../../base/storage-post-config.yaml
   - ../../../base/external-secrets.yaml
   - ../../../base/reflector.yaml
   - ../../../base/reloader.yaml
@@ -23,47 +23,47 @@ resources:
   - ../../../base/kyverno.yaml
 
   # xplane database config
-  # - ../../../base/xplane-provider-config.yaml
+  - ../../../base/xplane-provider-config.yaml
 
   # vault
-  # - ../../../base/vault.yaml
-  # - ../../../base/vault-post-config.yaml
+  - ../../../base/vault.yaml
+  - ../../../base/vault-post-config.yaml
 
   # dns-utils
-  # - ../../../base/dns-utils.yaml
-  # - ../../../base/dns-utils-post-config.yaml
-  # - ../../../base/dns-utils-pre.yaml
+  - ../../../base/dns-utils.yaml
+  - ../../../base/dns-utils-post-config.yaml
+  - ../../../base/dns-utils-pre.yaml
 
   # maintenance (velero,etc)
-  # - ../../../base/maintenance.yaml
-  # - ../../../base/maintenance-pre.yaml
+  - ../../../base/maintenance.yaml
+  - ../../../base/maintenance-pre.yaml
 
   # security
-  # - ../../../base/zitadel-pre.yaml
-  # - ../../../base/zitadel.yaml
-  # - ../../../base/zitadel-post-config.yaml
-  # - ../../../base/netbird-pre.yaml
-  # - ../../../base/netbird.yaml
-  # - ../../../base/netbird-post-config.yaml
-  # - ../../../base/netbird-operator.yaml
+  - ../../../base/zitadel-pre.yaml
+  - ../../../base/zitadel.yaml
+  - ../../../base/zitadel-post-config.yaml
+  - ../../../base/netbird-pre.yaml
+  - ../../../base/netbird.yaml
+  - ../../../base/netbird-post-config.yaml
+  - ../../../base/netbird-operator.yaml
 
   # nexus
-  # - ../../../base/nexus.yaml
-  # - ../../../base/nexus-pre.yaml
-  # - ../../../base/nexus-post-config.yaml
+  - ../../../base/nexus.yaml
+  - ../../../base/nexus-pre.yaml
+  - ../../../base/nexus-post-config.yaml
 
   # gitlab
-  # - ../../../base/gitlab-pre.yaml
-  # - ../../../base/gitlab.yaml
-  # - ../../../base/gitlab-post-config.yaml
+  - ../../../base/gitlab-pre.yaml
+  - ../../../base/gitlab.yaml
+  - ../../../base/gitlab-post-config.yaml
 
   # deploy-env
-  # - ../../../base/deploy-env.yaml
+  - ../../../base/deploy-env.yaml
 
   # monitoring
-  # - ../../../base/monitoring-pre.yaml
-  # - ../../../base/monitoring.yaml
-  # - ../../../base/monitoring-post-config.yaml
+  - ../../../base/monitoring-pre.yaml
+  - ../../../base/monitoring.yaml
+  - ../../../base/monitoring-post-config.yaml
 
   # k8s
-  # - ../../../base/k8s-post-config.yaml
+  - ../../../base/k8s-post-config.yaml
