--- a/gitops/argo-apps/base/sc-storage-post-config.yaml
+++ b/gitops/argo-apps/base/sc-storage-post-config.yaml
@@ -11,6 +11,9 @@ metadata:
 
 spec:
   project: default
+  dependsOn:
+    - name: rook-ceph
+      namespace: argocd
   syncPolicy:
     automated:
       prune: true
