--- a/gitops/argo-apps/base/capi-post-config.yaml
+++ b/gitops/argo-apps/base/capi-post-config.yaml
@@ -65,6 +65,9 @@ spec:
 
         - name: "utils_argocd_helm_helm_version"
           value: ${ARGOCD_ENV_utils_argocd_helm_helm_version}
+
+        - name: "utils_capi_capi_calico_helm_version"
+          value: ${ARGOCD_ENV_utils_capi_capi_calico_helm_version}
         # rook
         - name: "utils_capi_capi_rook_ceph_namespace"
           value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_namespace}"
