--- a/gitops/argo-apps/base/sc-storage-post-config.yaml
+++ b/gitops/argo-apps/base/sc-storage-post-config.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ${ARGOCD_ENV_argocd_app_namespace}
   annotations:
     argocd.argoproj.io/sync-wave: ${ARGOCD_ENV_utils_capi_capi_rook_ceph_post_config_sync_wave}
+    argocd.argoproj.io/compare-options: ServerSideDiff=false
 
   finalizers:
     - resources-finalizer.argocd.argoproj.io
