improve health check

--- a/gitops/applications/base/sc-storage-post-config/rook-external-config-job.yaml
+++ b/gitops/applications/base/sc-storage-post-config/rook-external-config-job.yaml
@@ -3,6 +3,8 @@ kind: Job
 metadata:
   name: rook-ceph-external-config
   namespace: ${ARGOCD_ENV_storage_namespace}
+  annotations:
+    argocd.argoproj.io/sync-wave: '-9'
 spec:
   template:
     spec:
