--- a/gitops/applications/base/sc-storage-post-config/rook-ceph-health-check.yaml
+++ b/gitops/applications/base/sc-storage-post-config/rook-ceph-health-check.yaml
@@ -17,8 +17,19 @@ spec:
         - /bin/sh
         - -c
         - |
-          until kubectl get cephcluster -n rook-ceph rook-ceph -o jsonpath='{.status.ceph.health}' | grep -q 'HEALTH_OK'; do
+          # Wait for the Ceph cluster to be healthy
+          until kubectl get cephcluster -n ${ARGOCD_ENV_storage_namespace} ${ARGOCD_ENV_storage_namespace} -o jsonpath='{.status.ceph.health}' | grep -q 'HEALTH_OK'; do
             echo "Waiting for Ceph cluster to be healthy..."
+            sleep 30
+          done
+          # Wait for the cephblockpoolto be healthy
+          until kubectl get cephblockpool -n ${ARGOCD_ENV_storage_namespace} ceph-blockpool -o jsonpath='{.status.phase}' | grep -q 'Ready'; do
+            echo "CephBlockPool not yet ready, waiting..."
+            sleep 30
+          done
+          # Wait for the cephobjectstore be healthy
+          until kubectl get cephobjectstore -n ${ARGOCD_ENV_storage_namespace} default -o jsonpath='{.status.phase}' | grep -q 'Ready'; do
+            echo "CephObjectStore not yet ready, waiting..."
             sleep 30
           done
       restartPolicy: OnFailure
