--- a/gitops/applications/base/sc-storage/rbac.yaml
+++ b/gitops/applications/base/sc-storage/rbac.yaml
@@ -27,7 +27,7 @@ rules:
     resources: ["pods/exec", "pods/attach"]
     verbs: ["create"]
   - apiGroups: ["ceph.rook.io"]
-    resources: ["cephobjectstores","cephclusters"]
+    resources: ["cephobjectstores","cephclusters","cephblockpools","cephfilesystems"]
     verbs: ["get", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
