--- a/gitops/applications/base/sc-storage/rgw-endpoint-job.yaml
+++ b/gitops/applications/base/sc-storage/rgw-endpoint-job.yaml
@@ -4,9 +4,9 @@ metadata:
   name: export-rgw-endpoint
   namespace: ${ARGOCD_ENV_storage_namespace}
 spec:
+  ttlSecondsAfterFinished: 100
   template:
     spec:
-      # ttlSecondsAfterFinished: 30
       restartPolicy: Never
       serviceAccountName: ceph-job-sa
       containers:
