--- a/gitops/argo-apps/base/capi-post-config.yaml
+++ b/gitops/argo-apps/base/capi-post-config.yaml
@@ -223,3 +223,32 @@ spec:
 
         - name: utils_app_namespace
           value: "${ARGOCD_ENV_utils_app_namespace}"
+
+        # argocd
+
+        - name: utils_argocd_helm_helm_version
+          value: "${ARGOCD_ENV_utils_argocd_helm_helm_version}"
+
+        - name: utils_argocd_helm_app_name
+          value: "${ARGOCD_ENV_utils_argocd_helm_app_name}"
+
+        - name: utils_argocd_helm_kube_version
+          value: "${ARGOCD_ENV_utils_argocd_helm_kube_version}"
+
+        - name: helm_version
+          value: "${ARGOCD_ENV_helm_version}"
+
+        - name: utils_argocd_helm_git_plugin_version
+          value: "${ARGOCD_ENV_utils_argocd_helm_git_plugin_version}"
+
+        - name: utils_argocd_helm_envsubst_version
+          value: "${ARGOCD_ENV_utils_argocd_helm_envsubst_version}"
+
+        - name: helmfile_version
+          value: "${ARGOCD_ENV_helmfile_version}"
+
+        - name: utils_argocd_helm_rollout_extension_version
+          value: "${ARGOCD_ENV_utils_argocd_helm_rollout_extension_version}"
+
+        - name: utils_argocd_helm_download_tools_golang_image_version
+          value: "ARGOCD_ENV_utils_argocd_helm_download_tools_golang_image_version"
