--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
@@ -208,7 +208,7 @@ spec:
               value: "${ARGOCD_ENV_utils_argocd_helm_rollout_extension_version}"
 
             - name: utils_argocd_helm_download_tools_golang_image_version
-              value: "ARGOCD_ENV_utils_argocd_helm_download_tools_golang_image_version"
+              value: "${ARGOCD_ENV_utils_argocd_helm_download_tools_golang_image_version}"
 
   providerConfigsRef:
     scK8sProviderName: sc-kubernetes-provider
