--- a/gitops/applications/base/kyverno/image-rewrite-policy.yaml
+++ b/gitops/applications/base/kyverno/image-rewrite-policy.yaml
@@ -19,6 +19,8 @@ spec:
             namespaces:
             - istio-ingress-ext
             - istio-ingress-int
+            - rook-ceph
+            - storage
       mutate:
         foreach:
           - list: request.object.spec.containers[]
