kyverno exclude storage namespace

--- a/gitops/applications/base/kyverno/image-rewrite-policy.yaml
+++ b/gitops/applications/base/kyverno/image-rewrite-policy.yaml
@@ -20,6 +20,7 @@ spec:
             - istio-ingress-ext
             - istio-ingress-int
             - rook-ceph
+            - storage
       mutate:
         foreach:
           - list: request.object.spec.containers[]
