--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -35,8 +35,8 @@ resources:
   - ../../../base/dns-utils-pre.yaml
 
   # maintenance (velero,etc)
-  - ../../../base/maintenance.yaml
-  - ../../../base/maintenance-pre.yaml
+  # - ../../../base/maintenance.yaml
+  # - ../../../base/maintenance-pre.yaml
 
   # security
   - ../../../base/zitadel-pre.yaml
