--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - object_syncer.yaml
+  - rbac.yaml
+  - storage-pre-sync-hook.yaml
   - rook-ceph-namespace.yaml
   - sync-secrets-cm.yaml
 
