--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/rbac.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/rbac.yaml
@@ -26,5 +26,27 @@ subjects:
     namespace: ${ARGOCD_ENV_storage_namespace}
 roleRef:
   kind: Role
-  name: storage-job-sa
+  name: storage-job-role
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: read-secrets-from-source-ns
+rules:
+  - apiGroups: [""]
+    resources: ["secrets"]
+    verbs: ["get", "list"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: read-secrets-from-source-ns-binding
+subjects:
+  - kind: ServiceAccount
+    name: storage-job-sa
+    namespace: ${ARGOCD_ENV_storage_namespace}
+roleRef:
+  kind: ClusterRole
+  name: read-secrets-from-source-ns
   apiGroup: rbac.authorization.k8s.io
