--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -463,4 +463,5 @@ capi_cluster_cidr: "10.10.127/24"
 capi_os_disk_size: "100G"
 capi_rook_ceph_disk_size: "300G"
 capi_rook_ceph_rgw_instance_replicas: "'2'"
+capi_calico_helm_version: "v3.30.0"
 ##end capi
