--- a/gitops/applications/base/zitadel-post-config/kustomization.yaml
+++ b/gitops/applications/base/zitadel-post-config/kustomization.yaml
@@ -4,5 +4,7 @@ resources:
   - zitadel-xplane-terraform-init.yaml
   - zitadel-xplane-terraform.yaml
   - vault-oidc-xplane-terraform.yaml
-  - argocd-oidc-xplane-terraform.yaml
+  # - argocd-oidc-xplane-terraform.yaml
   - k8s-oidc-xplane-terraform.yaml
+  - zitadel-xplane-providerconfig.yaml
+  - argocd-oidc.yaml
