--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -39,7 +39,7 @@ netbird_perc_backup_diff_schedule: "0 6 * * *"
 netbird_perc_pgbouncer_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-pgbouncer1.24.0"
 netbird_perc_pgbouncer_replicas: "'1'"
 netbird_perc_pgbouncer_expose_superusers: "'true'"
-netbird_perc_pgbouncer_pool_mode: session
+netbird_perc_pgbouncer_pool_mode: transaction
 netbird_perc_pgbouncer_query_wait_timeout: "'30'"
 netbird_perc_pgbouncer_max_prepared_statements: "'0'"
 netbird_perc_pgbouncer_cpu_limit: "200m"
@@ -360,7 +360,7 @@ praefect_perc_backup_diff_schedule: "0 6 * * *"
 praefect_perc_pgbouncer_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-pgbouncer1.24.0"
 praefect_perc_pgbouncer_replicas: "'1'"
 praefect_perc_pgbouncer_expose_superusers: "'true'"
-praefect_perc_pgbouncer_pool_mode: session
+praefect_perc_pgbouncer_pool_mode: transaction
 praefect_perc_pgbouncer_query_wait_timeout: "'30'"
 praefect_perc_pgbouncer_max_prepared_statements: "'0'"
 praefect_perc_pgbouncer_cpu_limit: "200m"
