--- a/gitops/applications/base/zitadel-post-config/argocd-oidc.yaml
+++ b/gitops/applications/base/zitadel-post-config/argocd-oidc.yaml
@@ -9,7 +9,10 @@ spec:
     argocdFqdn: "argocd.${ARGOCD_ENV_argocd_dns_subdomain}"
     zitadelFqdn: "zitadel.${ARGOCD_ENV_zitadel_dns_subdomain}"
     argocdNamespace: "${ARGOCD_ENV_argocd_namespace}"
-    zitadelAdminHumanUserId: # TODO: get from secret
+    zitadelAdminHumanUserIdRef:
+      name: ${ARGOCD_ENV_zitadel_post_config_output_secret}
+      namespace: ${ARGOCD_ENV_zitadel_namespace}
+      key: zitadel_admin_human_user_id
     adminRbacGroup: "${ARGOCD_ENV_argocd_admin_rbac_group}"
     userRbacGroup: "${ARGOCD_ENV_argocd_user_rbac_group}"
     oidcSecretName: "${ARGOCD_ENV_argocd_oidc_secret}"
