--- a/gitops/applications/base/zitadel-post-config/argocd-oidc.yaml
+++ b/gitops/applications/base/zitadel-post-config/argocd-oidc.yaml
@@ -4,6 +4,8 @@ kind: ArgocdOIDC
 metadata:
   name: zitadel-argocd-oidc-config
   namespace: ${ARGOCD_ENV_zitadel_namespace}
+  annotations:
+    argocd.argoproj.io/sync-wave: 5
 spec:
   parameters:
     argocdFqdn: "argocd.${ARGOCD_ENV_argocd_dns_subdomain}"
