--- a/gitops/applications/base/zitadel-post-config/zitadel-xplane-terraform-init.yaml
+++ b/gitops/applications/base/zitadel-post-config/zitadel-xplane-terraform-init.yaml
@@ -4,6 +4,8 @@ kind: Workspace
 metadata:
   name: zitadel-post-config-init
   namespace: ${ARGOCD_ENV_zitadel_namespace}
+  annotations:
+    argocd.argoproj.io/sync-wave: 0
 spec:
   forProvider:
     # Use any module source supported by terraform init -from-module.
@@ -49,7 +51,7 @@ spec:
   # workspace that uses this provider config, for example to setup Terraform
   # providers.
   configuration: |
-    terraform { 
+    terraform {
         backend "kubernetes" {
           secret_suffix     = "providerconfig-zitadel-post-config"
           namespace         = "${ARGOCD_ENV_zitadel_namespace}"
