--- a/terraform/gitlab/ci-templates/k8s-cluster/.gitlab-ci.yml
+++ b/terraform/gitlab/ci-templates/k8s-cluster/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 include:
-  - template: Terraform/Base.gitlab-ci.yml # https://gitlab.com/gitlab-org/gitlab/blob/master/lib/gitlab/ci/templates/Terraform/Base.latest.gitlab-ci.yml
+  - template: /OpenTofu/Base.latest.gitlab-ci.yml
 workflow:
   rules:
     - if: $CI_MERGE_REQUEST_IID
@@ -121,7 +121,9 @@ prepare:image:
       --destination "${CI_REGISTRY_IMAGE}:${DOCKER_TAG}"
 
 fmt:
-  extends: .terraform:fmt
+  extends: .opentofu:fmt
+  image:
+    name: ${CI_REGISTRY_IMAGE}:${IMAGE_TAG}
   stage: lint
   id_tokens:
     VAULT_ID_TOKEN:
@@ -162,7 +164,9 @@ init:
       - $CONFIG_PATH/*.json
 
 validate:
-  extends: .terraform:validate
+  extends: .opentofu:validate
+  image:
+    name: ${CI_REGISTRY_IMAGE}:${IMAGE_TAG}
   id_tokens:
     VAULT_ID_TOKEN:
       aud: https://$VAULT_FQDN
@@ -173,7 +177,9 @@ validate:
   when: manual
 
 build:
-  extends: .terraform:build
+  extends: .opentofu:plan
+  image:
+    name: ${CI_REGISTRY_IMAGE}:${IMAGE_TAG}
   id_tokens:
     VAULT_ID_TOKEN:
       aud: https://$VAULT_FQDN
@@ -182,7 +188,9 @@ build:
   when: manual
 
 deploy-infra:
-  extends: .terraform:deploy
+  extends: .opentofu:apply
+  image:
+    name: ${CI_REGISTRY_IMAGE}:${IMAGE_TAG}
   id_tokens:
     VAULT_ID_TOKEN:
       aud: https://$VAULT_FQDN
@@ -202,7 +210,9 @@ deploy-infra:
     - when: manual
 
 deploy-managed-srvcs:
-  extends: .terraform:deploy
+  extends: .opentofu:apply
+  image:
+    name: ${CI_REGISTRY_IMAGE}:${IMAGE_TAG}
   id_tokens:
     VAULT_ID_TOKEN:
       aud: https://$VAULT_FQDN
@@ -230,7 +240,9 @@ refresh-templates:
   when: manual
 
 destroy:
-  extends: .terraform:destroy
+  extends: .opentofu:destroy
+  image:
+    name: ${CI_REGISTRY_IMAGE}:${IMAGE_TAG}
   needs:
     - init
   id_tokens:
@@ -244,7 +256,9 @@ destroy:
   when: manual
 
 refresh-deploy-infra:
-  extends: .terraform:deploy
+  extends: .opentofu:apply
+  image:
+    name: ${CI_REGISTRY_IMAGE}:${IMAGE_TAG}
   stage: auto-run
   needs:
     - init
@@ -268,7 +282,9 @@ refresh-deploy-infra:
     - when: manual
 
 tf-refresh-deploy-infra:
-  extends: .terraform:deploy
+  extends: .opentofu:apply
+  image:
+    name: ${CI_REGISTRY_IMAGE}:${IMAGE_TAG}
   stage: auto-run-tf
   needs:
     - init
@@ -355,6 +371,6 @@ push-apps:
       aud: https://$VAULT_FQDN
   script:
     - export VAULT_TOKEN="$(vault write -field=token auth/${VAULT_AUTH_PATH}/login role=$VAULT_AUTH_ROLE jwt=$VAULT_ID_TOKEN)"
-    - export GITLAB_CI_PAT="$(vault kv get -field=value ${KV_SECRET_PATH}/gitlab/gitlab_ci_pat)"
+    - export GITLAB_CI_PAT="$(vault kv get -field=token ${KV_SECRET_PATH}/gitlab/gitlab_ci_pat)"
     - source setcivars.sh
     - .gitlab/scripts/pushtorepo.sh $CI_PROJECT_PATH $CI_SERVER_HOST $CI_COMMIT_REF_NAME $GITOPS_BUILD_OUTPUT_DIR $GITLAB_CI_PAT $ARGO_CD_ROOT_APP_PATH
