feat: add missing zitadel config package

--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -116,6 +116,7 @@ crossplane_packages_nb_config_version: "v0.1.1"
 crossplane_packages_aws_documentdb_version: "v0.4.0"
 crossplane_packages_aws_rds_version: "v0.2.0"
 crossplane_packages_argocd_config_version: "v0.1.0-pr62-15117476143"
+crossplane_packages_zitadel_config_version: "v0.1.0-pr62-15117476143"
 velero_helm_version: "8.3.0"
 velero_plugin_version: "v1.11.1"
 coredns_localcache_version: "1.11.3"
