--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -46,7 +46,7 @@ netbird_perc_backup_diff_schedule: "0 6 * * *"
 netbird_perc_pgbouncer_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-pgbouncer1.24.0"
 netbird_perc_pgbouncer_replicas: "'1'"
 netbird_perc_pgbouncer_expose_superusers: "'true'"
-netbird_perc_pgbouncer_pool_mode: transaction
+netbird_perc_pgbouncer_pool_mode: "transaction"
 netbird_perc_pgbouncer_query_wait_timeout: "'30'"
 netbird_perc_pgbouncer_max_prepared_statements: "'0'"
 netbird_perc_pgbouncer_cpu_limit: "200m"
@@ -316,7 +316,7 @@ gitlab_perc_backup_diff_schedule: "0 6 * * *"
 gitlab_perc_pgbouncer_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-pgbouncer1.24.0"
 gitlab_perc_pgbouncer_replicas: "'1'"
 gitlab_perc_pgbouncer_expose_superusers: "'true'"
-gitlab_perc_pgbouncer_pool_mode: transaction
+gitlab_perc_pgbouncer_pool_mode: "transaction"
 gitlab_perc_pgbouncer_query_wait_timeout: "'120'"
 gitlab_perc_pgbouncer_max_prepared_statements: "'0'"
 gitlab_perc_pgbouncer_cpu_limit: "200m"
@@ -364,7 +364,7 @@ praefect_perc_backup_diff_schedule: "0 6 * * *"
 praefect_perc_pgbouncer_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-pgbouncer1.24.0"
 praefect_perc_pgbouncer_replicas: "'1'"
 praefect_perc_pgbouncer_expose_superusers: "'true'"
-praefect_perc_pgbouncer_pool_mode: transaction
+praefect_perc_pgbouncer_pool_mode: "transaction"
 praefect_perc_pgbouncer_query_wait_timeout: "'30'"
 praefect_perc_pgbouncer_max_prepared_statements: "'0'"
 praefect_perc_pgbouncer_cpu_limit: "200m"
@@ -425,7 +425,7 @@ zitadel_perc_backup_diff_schedule: "0 6 * * *"
 zitadel_perc_pgbouncer_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-pgbouncer1.24.0"
 zitadel_perc_pgbouncer_replicas: "'1'"
 zitadel_perc_pgbouncer_expose_superusers: "'true'"
-zitadel_perc_pgbouncer_pool_mode: transaction
+zitadel_perc_pgbouncer_pool_mode: "transaction"
 zitadel_perc_pgbouncer_query_wait_timeout: "'30'"
 zitadel_perc_pgbouncer_max_prepared_statements: "'1'"
 zitadel_perc_pgbouncer_cpu_limit: "200m"
