--- a/terraform/ccnew/default-config/aws-vars.yaml
+++ b/terraform/ccnew/default-config/aws-vars.yaml
@@ -1,3 +1,4 @@
 aws_provider_version: ">= 5.0.0"
 cloudposse_utils_version: ">=1.12.0"
 dns_resolver_ip: 1.1.1.1
+private_dns_zone_id: "dummystring"
