changes including from fix/pool-mode

--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -114,8 +114,8 @@ crossplane_packages_utils_version: "v0.5.0"
 crossplane_packages_gitlab_version: "v0.3.0"
 crossplane_packages_vault_config_version: "v0.1.0"
 crossplane_packages_sc_postgres_version: "v0.2.0-pr71-14928307069"
-crossplane_packages_sc_mysql_version: "v0.1.0"
-crossplane_packages_sc_mongodb_version: "v0.1.0"
+crossplane_packages_sc_mysql_version: "v0.2.0"
+crossplane_packages_sc_mongodb_version: "v0.2.0"
 crossplane_packages_sc_bootstrap_version: "v0.3.2-pr75-15065070413"
 crossplane_packages_sc_nboperatorinstall_version: "v0.1.0"
 crossplane_packages_nb_config_version: "v0.1.1"
@@ -367,7 +367,7 @@ praefect_perc_backup_diff_schedule: "0 6 * * *"
 praefect_perc_pgbouncer_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-pgbouncer1.24.0"
 praefect_perc_pgbouncer_replicas: "'1'"
 praefect_perc_pgbouncer_expose_superusers: "'true'"
-praefect_perc_pgbouncer_pool_mode: session
+praefect_perc_pgbouncer_pool_mode: transaction
 praefect_perc_pgbouncer_query_wait_timeout: "'30'"
 praefect_perc_pgbouncer_max_prepared_statements: "'0'"
 praefect_perc_pgbouncer_cpu_limit: "200m"
