add nb features for sync role and access token expiry (#587)

--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -94,7 +94,7 @@ crossplane_providers_terraform_version: "0.16.0"
 crossplane_providers_ansible_version: "0.6.0"
 crossplane_providers_k8s_version: "0.18.0"
 crossplane_providers_helm_version: "0.20.4"
-crossplane_providers_netbird_version: "0.0.21"
+crossplane_providers_netbird_version: "0.0.25"
 crossplane_providers_aws_version: "0.49.2"
 crossplane_providers_aws_family_version: "1.21.1"
 crossplane_providers_aws_s3_version: "1.21.0"
@@ -117,7 +117,7 @@ crossplane_packages_sc_mysql_version: "v0.2.0"
 crossplane_packages_sc_mongodb_version: "v0.2.0"
 crossplane_packages_sc_bootstrap_version: "v0.3.2-pr75-15065070413"
 crossplane_packages_sc_nboperatorinstall_version: "v0.1.0"
-crossplane_packages_nb_config_version: "v0.1.1"
+crossplane_packages_nb_config_version: "v0.1.1-pr76-15185499088"
 crossplane_packages_aws_documentdb_version: "v0.4.0"
 crossplane_packages_aws_rds_version: "v0.2.0"
 velero_helm_version: "8.3.0"
