--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -364,7 +364,7 @@ praefect_perc_backup_diff_schedule: "0 6 * * *"
 praefect_perc_pgbouncer_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-pgbouncer1.24.0"
 praefect_perc_pgbouncer_replicas: "'1'"
 praefect_perc_pgbouncer_expose_superusers: "'true'"
-praefect_perc_pgbouncer_pool_mode: transaction
+praefect_perc_pgbouncer_pool_mode: "transaction"
 praefect_perc_pgbouncer_query_wait_timeout: "'30'"
 praefect_perc_pgbouncer_max_prepared_statements: "'0'"
 praefect_perc_pgbouncer_cpu_limit: "200m"
