chore: temp hardcoding package version

--- a/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
+++ b/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
@@ -108,5 +108,6 @@ kind: Configuration
 metadata:
   name: zitadel-config
 spec:
-  package: ghcr.io/mojaloop/iac-crossplane-packages/zitadel-config:${ARGOCD_ENV_crossplane_packages_zitadel_config_version}
+  # package: ghcr.io/mojaloop/iac-crossplane-packages/zitadel-config:${ARGOCD_ENV_crossplane_packages_zitadel_config_version}
+  package: ghcr.io/mojaloop/iac-crossplane-packages/zitadel-config:v0.1.0-pr62-15260504679 # TODO: Temporary
   skipDependencyResolution: true
