--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -484,4 +484,4 @@ capi_calico_helm_version: "v3.30.0"
 
 #backup
 cc_backup_bucket: "control-center-backup"
-cc_backup_storage_size: "100Gi"
+cc_backup_bucket_storage_size: "100Gi"
