--- a/gitops/applications/base/velero-pre/kustomization.yaml
+++ b/gitops/applications/base/velero-pre/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespaces.yaml
+  - namespace.yaml
   - backup-bucket.yaml
