--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -35,7 +35,7 @@ resources:
   - ../../../base/dns-utils-pre.yaml
 
   # velero
-  - ../../../base/velero-pre.yaml
+  # - ../../../base/velero-pre.yaml
   # - ../../../base/maintenance-pre.yaml
 
   # security
