--- a/terraform/gitlab/ci-templates/k8s-cluster/.gitlab-ci.yml
+++ b/terraform/gitlab/ci-templates/k8s-cluster/.gitlab-ci.yml
@@ -234,7 +234,10 @@ destroy:
     - if [ -d "$ANSIBLE_BASE_OUTPUT_DIR" ]; then echo "Inventory artifact exists"; else echo "Inventory artifact does not exist; Please rerun deploy-infra before destroy"; exit 1; fi
     - terragrunt run-all destroy --terragrunt-non-interactive -input=false
     - .gitlab/scripts/cleanapps.sh $CI_PROJECT_PATH $CI_SERVER_HOST $CI_COMMIT_REF_NAME $GITOPS_BUILD_OUTPUT_DIR $GITLAB_CI_PAT $ARGO_CD_ROOT_APP_PATH
-  when: manual
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_COMMIT_TITLE =~ /^destroy:.*/
+      when: manual
+    - when: never
 
 refresh-deploy-infra:
   extends: .terraform:deploy
