--- a/gitops/argo-apps/base/velero.yaml
+++ b/gitops/argo-apps/base/velero.yaml
@@ -31,7 +31,7 @@ spec:
   sources:
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
       targetRevision: ${ARGOCD_ENV_velero_application_gitrepo_tag}
-      path: gitops/applications/overlays/cloud_provider/${ARGOCD_ENV_dynamic_secret_platform}/velero
+      path: gitops/applications/base/velero
       plugin:
         name: envsubst
         env:
