--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -36,7 +36,7 @@ resources:
 
   # velero
   - ../../../base/velero-pre.yaml
-  - ../../../base/velero.yaml
+  #- ../../../base/velero.yaml
 
   # security
   - ../../../base/zitadel-pre.yaml
