--- a/gitops/applications/base/zitadel-post-config/argocd-oidc.yaml
+++ b/gitops/applications/base/zitadel-post-config/argocd-oidc.yaml
@@ -18,6 +18,10 @@ spec:
     adminRbacGroup: "${ARGOCD_ENV_argocd_admin_rbac_group}"
     userRbacGroup: "${ARGOCD_ENV_argocd_user_rbac_group}"
     oidcSecretName: "${ARGOCD_ENV_argocd_oidc_secret}"
+    organizationIdSecretRef:
+      name: ${ARGOCD_ENV_zitadel_post_config_init_output_secret}
+      namespace: ${ARGOCD_ENV_zitadel_namespace}
+      key: zitadel_org_id
 
   providerConfigsRef:
     zitadelProviderName: zitadel-provider
