--- a/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
+++ b/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
@@ -100,7 +100,8 @@ kind: Configuration
 metadata:
   name: argocd-config
 spec:
-  package: ghcr.io/mojaloop/iac-crossplane-packages/argocd-config:${ARGOCD_ENV_crossplane_packages_argocd_config_version}
+  # package: ghcr.io/mojaloop/iac-crossplane-packages/argocd-config:${ARGOCD_ENV_crossplane_packages_argocd_config_version}
+  package: ghcr.io/mojaloop/iac-crossplane-packages/argocd-config:v0.1.0-pr62-15303275312 # TODO: Temporary
   skipDependencyResolution: true
 ---
 apiVersion: pkg.crossplane.io/v1
