--- a/gitops/argo-apps/base/argocd-helm.yaml
+++ b/gitops/argo-apps/base/argocd-helm.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ${ARGOCD_ENV_utils_app_namespace}
   annotations:
     argocd.argoproj.io/sync-wave: ${ARGOCD_ENV_utils_sync_wave}
+    argocd.argoproj.io/sync-options: Validate=false
 
   # Add this finalizer ONLY if you want these to cascade delete (A cascade delete, deletes both the app and its resources, rather than only the app.)
   # finalizers:
@@ -870,7 +871,7 @@ spec:
                         template:
                           metadata:
                             annotations:
-                              kyverno.platform.mojaloop.com/triggerrestart: '{{request.object.metadata.resourceVersion}}'
+                              kyverno.platform.mojaloop.com/triggerrestart: {{ "{{request.object.metadata.resourceVersion}}" }}
                     targets:
                     - apiVersion: apps/v1
                       kind: Deployment
@@ -881,7 +882,7 @@ spec:
                   name: add-annotation-on-configmap-and-secret-update
                   preconditions:
                     all:
-                    - key: '{{request.operation}}'
+                    - key: {{ "{{request.operation}}" }}
                       operator: Equals
                       value: UPDATE
                   skipBackgroundRequests: true
